# lunch_logger

./: README.md
webview/: Cargo.toml  index.html
webview/public/: main.css
webview/src/: data.rs  time.rs
webview/src/components/: menu_thumbnail.rs  mod.rs  modal.rs  view_footer.rs  view_header.rs
webview/src/connection/: interface.rs
