[package]
name = "webview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
log = "0.4.17"
serde = "1.0.152"
serde_json = "1.0.93"
strum = "0.24.1"
strum_macros = "0.24.3"
wasm-logger = "0.2.0"

[dependencies.yew]
version = "0.20.0"
features = [
    "csr",
]

[dependencies.yew_icons]
version = "0.7.0"
features = [
    "BootstrapMap",
    "FontAwesomeSolidArrowLeft",
    "FontAwesomeSolidUtensils",
    "HeroiconsSolidBuildingStorefront",
    "LucideFilter",
    "OcticonsNoEntry24",
    "OcticonsPencil24",
    "OcticonsPlusCircle24",
    "OcticonsSync24",
]

